<resources>
    <string name="app_name">Aamukampa</string>
    <string name="date_field">pp.kk.vvvv</string>
    <string name="button">Näytä Tj</string>
    <string name="message">Aamuja</string>
    <string name="back_button">Takaisin</string>
    <string name="text1">Kotiutumispäivä</string>
    <string name="preference_file_key">com.example.aamukampa.PREFERENCE_FILE_KEY</string>
    <string name="saved_date_key">date</string>
    <string name="toggle_notifications">Ilmoitukset</string>
    <string name="kampa_piikit">Kamman piikit</string>
    <string name="TJ">TJ</string>
    <string name="kampa_button">Luo kampa</string>
    <string name="gotoKampa">Näytä kampa</string>
    <string name="keulitaan">EI KEULITA!</string>
    <string name="saved_kampa_key">piikit</string>
</resources>
